<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tech_reeturaj.navigationdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <action
            android:id="@+id/action_nav_home_to_nav_favorite"
            app:destination="@id/nav_favorite" />
        <action
            android:id="@+id/action_nav_home_to_nav_logout"
            app:destination="@id/nav_logout" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.tech_reeturaj.navigationdrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.tech_reeturaj.navigationdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.tech_reeturaj.navigationdrawer.ui.favorite.Favorite_Fragment"
        android:label="@string/favourite"
        tools:layout="@layout/favorite_fragment" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.tech_reeturaj.navigationdrawer.ui.logout.Logout_Fragment"
        android:label="@string/logout"
        tools:layout="@layout/logout_fragment" />

</navigation>